--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-static": "^0.7.11",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
