--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/simpsonw/ual-libapps#readme",
   "devDependencies": {
     "css-loader": "^3.4.2",
+    "file-loader": "^5.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-static": "^0.7.11",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
