--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-merge-and-include-globally": "^2.1.24"
   },
   "dependencies": {
+    "jquery-once": "^2.2.3",
     "normalize.css": "^8.0.1"
   }
 }
