--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "css-loader": "^3.4.2",
     "file-loader": "^5.1.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "minimist": ">=1.2.3",
     "node-static": "^0.7.11",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "style-loader": "^1.1.3",
-    "webpack": "^4.41.6",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-merge-and-include-globally": "^2.1.24"
   },
